--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -1393,6 +1393,388 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pandas Multiindex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex([('California', 2000),\n",
+       "            ('California', 2010),\n",
+       "            (  'New York', 2000),\n",
+       "            (  'New York', 2010),\n",
+       "            (     'Texas', 2000),\n",
+       "            (     'Texas', 2010)],\n",
+       "           )"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = pd.MultiIndex.from_tuples(index)\n",
+    "index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "California  2000    33871648\n",
+       "            2010    37253956\n",
+       "New York    2000    18976457\n",
+       "            2010    19378102\n",
+       "Texas       2000    20851820\n",
+       "            2010    25145561\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop = pop.reindex(index)\n",
+    "pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "California    37253956\n",
+       "New York      19378102\n",
+       "Texas         25145561\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop[:,2010]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2000</th>\n",
+       "      <th>2010</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>California</th>\n",
+       "      <td>33871648</td>\n",
+       "      <td>37253956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New York</th>\n",
+       "      <td>18976457</td>\n",
+       "      <td>19378102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Texas</th>\n",
+       "      <td>20851820</td>\n",
+       "      <td>25145561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                2000      2010\n",
+       "California  33871648  37253956\n",
+       "New York    18976457  19378102\n",
+       "Texas       20851820  25145561"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop_df = pop.unstack() # 데이터프레임 전환\n",
+    "pop_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "California  2000    33871648\n",
+       "            2010    37253956\n",
+       "New York    2000    18976457\n",
+       "            2010    19378102\n",
+       "Texas       2000    20851820\n",
+       "            2010    25145561\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop_df.stack() # unstack과 반대"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>total</th>\n",
+       "      <th>under18</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">California</th>\n",
+       "      <th>2000</th>\n",
+       "      <td>33871648</td>\n",
+       "      <td>9267089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>37253956</td>\n",
+       "      <td>9284094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">New York</th>\n",
+       "      <th>2000</th>\n",
+       "      <td>18976457</td>\n",
+       "      <td>4687374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>19378102</td>\n",
+       "      <td>4318033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Texas</th>\n",
+       "      <th>2000</th>\n",
+       "      <td>20851820</td>\n",
+       "      <td>5906301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>25145561</td>\n",
+       "      <td>6879014</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    total  under18\n",
+       "California 2000  33871648  9267089\n",
+       "           2010  37253956  9284094\n",
+       "New York   2000  18976457  4687374\n",
+       "           2010  19378102  4318033\n",
+       "Texas      2000  20851820  5906301\n",
+       "           2010  25145561  6879014"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop_df = pd.DataFrame({'total': pop,\n",
+    "                       'under18': [9267089, 9284094,\n",
+    "                                   4687374, 4318033,\n",
+    "                                   5906301, 6879014]})\n",
+    "pop_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "California  2000    0.273594\n",
+      "            2010    0.249211\n",
+      "New York    2000    0.247010\n",
+      "            2010    0.222831\n",
+      "Texas       2000    0.283251\n",
+      "            2010    0.273568\n",
+      "dtype: float64 \n",
+      "\n",
+      "                2000      2010\n",
+      "California  0.273594  0.249211\n",
+      "New York    0.247010  0.222831\n",
+      "Texas       0.283251  0.273568\n"
+     ]
+    }
+   ],
+   "source": [
+    "f_u18 = pop_df['under18'] / pop_df['total']\n",
+    "print(f_u18, '\\n')\n",
+    "print(f_u18.unstack())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex([('a', 1),\n",
+       "            ('a', 2),\n",
+       "            ('b', 1),\n",
+       "            ('b', 2)],\n",
+       "           )"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(np.random.rand(4,2),\n",
+    "                  index = [['a','a','b','b'], [1,2,1,2]],\n",
+    "                  columns = ['data1','data2'])\n",
+    "df\n",
+    "\n",
+    "pd.MultiIndex.from_arrays([['a','a','b','b'], [1,2,1,2]])\n",
+    "pd.MultiIndex.from_tuples([('a',1),('a',2),('b',1),('b',2)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state       year\n",
+       "California  2000    33871648\n",
+       "            2010    37253956\n",
+       "New York    2000    18976457\n",
+       "            2010    19378102\n",
+       "Texas       2000    20851820\n",
+       "            2010    25145561\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop.index.names = ['state','year']\n",
+    "pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state       year\n",
+       "California  2000    33871648\n",
+       "            2010    37253956\n",
+       "Texas       2000    20851820\n",
+       "            2010    25145561\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop[['California','Texas']]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
