--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -2105,6 +2105,209 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data set 결합 - Concat / Append"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A0</td>\n",
+       "      <td>B0</td>\n",
+       "      <td>C0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A1</td>\n",
+       "      <td>B1</td>\n",
+       "      <td>C1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A2</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>C2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C\n",
+       "0  A0  B0  C0\n",
+       "1  A1  B1  C1\n",
+       "2  A2  B2  C2"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def make_df(cols,ind):\n",
+    "    \"\"\"빠르게 dataframe 생성\"\"\"\n",
+    "    data = {c: [str(c) + str(i) for i in ind]\n",
+    "            for c in cols}\n",
+    "    return pd.DataFrame(data,ind)\n",
+    "\n",
+    "# data_df 예제\n",
+    "\n",
+    "make_df('ABC',range(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [1,2,3]\n",
+    "y = [4,5,6]\n",
+    "z = [7,8,9]\n",
+    "np.concatenate([x,y,z]) #np.concatenate "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 1, 2],\n",
+       "       [3, 4, 3, 4]])"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [[1,2],\n",
+    "     [3,4]]\n",
+    "np.concatenate([x,x],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    A\n",
+       "2    B\n",
+       "3    C\n",
+       "4    D\n",
+       "5    E\n",
+       "6    F\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser1 = pd.Series(['A','B','C'], index = [1,2,3])\n",
+    "ser2 = pd.Series(['D','E','F'], index = [4,5,6])\n",
+    "pd.concat([ser1,ser2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B\n",
+      "1  A1  B1\n",
+      "2  A2  B2 \n",
+      "\n",
+      "    A   B\n",
+      "3  A3  B3\n",
+      "4  A4  B4 \n",
+      "\n",
+      "    A   B\n",
+      "1  A1  B1\n",
+      "2  A2  B2\n",
+      "3  A3  B3\n",
+      "4  A4  B4\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = make_df('AB',[1,2])\n",
+    "df2 = make_df('AB',[3,4])\n",
+    "\n",
+    "print(df1, '\\n')\n",
+    "print(df2,'\\n')\n",
+    "print(pd.concat([df1,df2]))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
